@@ -19,7 +19,9 @@ Changes in 2.0.2-alpha:
  o New function to automate connecting on a socket-based bufferevent.
  o New functions to automate listening for incoming TCP connections.
  o Do case-insensitive checks with a locale-independent comparison function.
-
+ o Rename the evbuffercb and everrorcb callbacks to bufferevent_data_cb and bufferevent_event_cb respectively.  The old names are available in bufferevent_compat.h.
+ o Rename the EVBUFFER_* codes used by bufferevent event callbacks to BEV_EVENT_*, to avoid namespace collision with evbuffer flags.  The old names are available in bufferevent_compat.h.
+ o Move the EVBUFFER_INPUT and EVBUFFER_OUTPUT macros to bufferevent_compat.h
 
 Changes in 2.0.1-alpha:
  o free minheap on event_base_free(); from Christopher Layne
